update mali i zadnji za 10

--- a/about.html
+++ b/about.html
@@ -78,10 +78,10 @@
 <body>
   <div class="winver-box">
     <img src="https://horvatska.github.io/favicon.ico" alt="Windows Logo" class="logo">
-    <div class="title">HORVATSKA V4</div>
+    <div class="title">HORVATSKA 10</div>
     <hr />
     <p><strong>Horvatska Operativni Sustav</strong><br>
-    Version v4.0 (OS Build 1945.1488)<br>
+    NT 4.0 (OS Build 1945.1488)<br>
     © Bubijan Corporation. All rights reserved.</p>
 
     <p>Ovaj operativni sustav je zaštićena marka Bubijana d.o.o. pod Pičkovačkom vladom Sekcija 34 Poglavlje 34.</p>
