--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- Taskbar -->
 <div id="taskbar">
   <button id="start-button" title="Start">
-    <img src="assets/images/linux-penguin-logo-vector.png" alt="Start Logo" id="start-logo" />
+    <img src="assets/images/win.png" alt="Start Logo" id="start-logo" />
   </button>
   <button id="ie-button" class="taskbar-icon" title="Internet Explorer">
   <img src="assets/images/ie.png" alt="Internet Explorer" id="ie-logo" />
@@ -44,8 +44,8 @@
 <!-- Start Menu -->
 <div id="start-menu" class="hidden">
   <div class="start-menu-header">
-    <img src="assets/images/linux-penguin-logo-vector.png" alt="Logo" />
-    <span>HORVATSKA V4</span>
+    <img src="assets/images/win.png" alt="Logo" />
+    <span>HORVATSKA 10</span>
   </div>
   <ul class="start-menu-list">
     <li id="start-about">About Horvatska</li>
