Update logo image source in about.html

--- a/about.html
+++ b/about.html
@@ -77,7 +77,7 @@
 </head>
 <body>
   <div class="winver-box">
-    <img src="https://horvatska.github.io/favicon.ico" alt="Windows Logo" class="logo">
+    <img src="assets/images/alt.png" alt="Windows Logo" class="logo">
     <div class="title">HORVATSKA 10</div>
     <hr />
     <p><strong>Horvatska Operativni Sustav</strong><br>
